# fridge

./: .gitignore  AGENTS.md  BRAINSTORM.md  PLAN.md  SPEC.md  THEORY.md  pyproject.toml  thresholds.yaml
artifacts/: run_info.json
configs/: base.yaml  default.yaml  inference.yaml  train.yaml
data/manifests/: recordings.jsonl
manifests/: recordings.csv
metrics/: train.jsonl  val.jsonl
scripts/: check_env.py  evaluate.py  prepare_data.py  replay_stream.py  run_tests.py  stream.py  sweep_thresholds.py  train.py
src/fridge/: __init__.py  augment.py  beats_frontend.py  cli.py  config.py  dataset.py  eval.py  io_audio.py  model.py  postprocess.py  streaming.py  train.py  windowing.py
src/fridge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/fridge/data/: augment.py  dataset.py  noise_pool.py  recordings.py  splits.py  windowing.py
src/fridge/eval/: metrics.py  stream_eval.py
src/fridge/features/: beats_frontend.py
src/fridge/io/: audio.py  manifest.py
src/fridge/models/: beats_backbone.py  factory.py  heads.py  wrapper.py
src/fridge/streaming/: __init__.py  buffer.py  hysteresis.py
src/fridge/train/: loops.py  optim.py  schedulers.py
src/fridge/utils/: paths.py  seed.py
tests/: test_hysteresis.py  test_postprocess.py  test_specaugment.py  test_splits.py  test_windowing.py
