[project]
name = "fridge"
version = "0.1.0"
description = "Noise detector using audio analysis"
requires-python = "==3.11.*"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "sounddevice>=0.4.7",
    "soundfile>=0.12",
    "torch>=2.2",
    "torchaudio>=2.2",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
fridge = "fridge.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
